syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package proto;
option go_package = "./proto";

message Product {
    string                    Id         = 1;
    string                    Name       = 2;
    uint64                    Dollars    = 3;
    uint32                    Cents      = 4;
    uint32                    Amount     = 5;
    bool                      IsImported = 6;
    google.protobuf.Timestamp CreatedAt  = 7;
    google.protobuf.Timestamp UpdatedAt  = 8;
}

message ProductId {
    string Id = 1;
}

service ProductService {
    rpc ListProducts (google.protobuf.Empty) returns (stream Product);
    rpc ReadProduct  (ProductId)             returns (Product); 
}